# Terminal_Raytracer

./: CMakeLists.txt  readme.md
.github/workflows/: raytracer.yml
assets/Default/: Cursor.json
config/: phong.cfg  simple.cfg  simple2.cfg  skybox.cfg  triangle.cfg  zebra.cfg
include/: CMakeLists.txt
include/core/: RayTracer.hpp
include/core/argument/: Argument.hpp  Arguments.hpp
include/core/config/: RayConfig.hpp
include/core/env/: Color.hpp  Ray.hpp
include/core/env/object/: ALight.hpp  APrimitive.hpp  Camera.hpp  IFilter.hpp  ILight.hpp  IMaterial.hpp  IPrimitive.hpp  ISurface.hpp  Object.hpp
include/core/env/scene/: RenderEvent.hpp  Scene.hpp  SceneContext.hpp  SceneTransformer.hpp  TransformedObject.hpp
include/core/env/tree/: Node.hpp  ObjectNode.hpp  ParentNode.hpp  SceneNode.hpp  TransformNode.hpp
include/core/factory/: Factory.hpp  ObjectPrimitiveWrapper.hpp
include/core/math/: MathError.hpp  MathRepresentationError.hpp  Point.hpp  Rectangle.hpp  SquareMatrix.hpp  Transformation3.hpp  Tuple.hpp  UnitConverter.hpp  Vector.hpp
include/display/ppm/: PPMDisplay.hpp
include/display/sfml/: SFML.hpp  SFMLDisplay.hpp
include/display/tdl/: TDL.hpp  TDLDisplay.hpp
include/plugin/filter/: GrayScaleFilter.hpp  NegativeFilter.hpp  SepiaFilter.hpp
include/plugin/light/: AmbientLight.hpp  DiffuseLight.hpp  DirectionalLight.hpp
include/plugin/material/: PhongMaterial.hpp  ReflectiveMaterial.hpp  RefractiveMaterial.hpp
include/plugin/primitive/: Cone.hpp  Cuboid.hpp  Cylinder.hpp  Ellipsoid.hpp  Plane.hpp  Torus.hpp  Triangle.hpp
include/plugin/surface/: ChessboardSurface.hpp  ColorSurface.hpp  PerlinNoiseSurface.hpp  TextureSurface.hpp
include/plugin/surface/texture/: Texture.hpp  TextureLoader.hpp
src/core/: CMakeLists.txt  Main.cpp  RayTracer.cpp
src/core/argument/: Argument.cpp  Arguments.cpp
src/core/config/: RayConfig.cpp
src/core/env/object/: Camera.cpp
src/core/env/scene/: Scene.cpp  SceneTransformer.cpp
src/core/factory/: ObjectPrimitiveWrapper.cpp
src/display/: CMakeLists.txt
src/display/ppm/: Entrypoint.cpp  PPMDisplay.cpp  Updater.cpp
src/display/sfml/: CMakeLists.txt  Entrypoint.cpp  SFML.cpp  SFMLDisplay.cpp  Updater.cpp
src/display/tdl/: CMakeLists.txt  Entrypoint.cpp  TDL.cpp  TDLDisplay.cpp
src/plugin/: CMakeLists.txt
src/plugin/filter/: Filter.cpp  GrayScaleFilter.cpp  NegativeFilter.cpp  SepiaFilter.cpp
src/plugin/light/: AmbientLight.cpp  DiffuseLight.cpp  DirectionalLight.cpp  Light.cpp
src/plugin/material/: Material.cpp  PhongMaterial.cpp  ReflectiveMaterial.cpp  RefractiveMaterial.cpp
src/plugin/primitive/: Cone.cpp  Cuboid.cpp  Cylinder.cpp  Ellipsoid.cpp  Plane.cpp  Primitive.cpp  Torus.cpp  Triangle.cpp
src/plugin/surface/: ChessboardSurface.cpp  ColorSurface.cpp  PerlinNoiseSurface.cpp  Surface.cpp  TextureSurface.cpp
src/plugin/surface/texture/: Texture.cpp  TextureLoader.cpp
